--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 	<script src="bower_components/requirejs/require.js"></script>
-	<script src="main.js"></script>
+	<script src="Main.js"></script>
 </body>
 </html>
