--- a/src/public/index.html
+++ b/src/public/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Chat</title>
+  <link rel="stylesheet" type="text/css" href="styles/style.css">
 </head>
 <body>
 	<script src="bower_components/requirejs/require.js"></script>
